--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.6.8' %}
+{% set version = '0.6.9' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,31 +10,44 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/rtweet_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/rtweet/rtweet_{{ version }}.tar.gz
-  sha256: 55c2bbb4e339d06bcc79eae255bcd4c9b9b5069f6c3b71303ffb283e7cf45464
+  sha256: 2fca3a1303c30dde8b71fc6656abc856776f13a5d8dc71aa3c24bfe7996b289e
 
 build:
-  noarch: generic
   merge_build_host: True  # [win]
-  number: 1000
-  noarch: generic
+  number: 0
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
-
+    - {{ compiler('c') }}              # [not win]
+    - {{ compiler('m2w64_c') }}        # [win]
+    - {{ compiler('cxx') }}            # [not win]
+    - {{ compiler('m2w64_cxx') }}      # [win]
+    - {{posix}}filesystem        # [win]
+    - {{posix}}make
+    - {{posix}}sed               # [win]
+    - {{posix}}coreutils         # [win]
+    - {{posix}}zip               # [win]
   host:
     - r-base
+    - r-rcpp
+    - r-httpuv
     - r-httr >=1.3.0
     - r-jsonlite >=0.9.22
     - r-magrittr >=1.5.0
+    - r-progress
     - r-tibble >=1.3.4
   run:
     - r-base
+    - {{native}}gcc-libs         # [win]
+    - r-rcpp
+    - r-httpuv
     - r-httr >=1.3.0
     - r-jsonlite >=0.9.22
     - r-magrittr >=1.5.0
+    - r-progress
     - r-tibble >=1.3.4
 
 test:
@@ -57,23 +70,24 @@ extra:
 
 # Package: rtweet
 # Type: Package
-# Version: 0.6.8
+# Version: 0.6.9
 # Title: Collecting Twitter Data
 # Authors@R: c( person("Michael W.", "Kearney", , email = "kearneymw@missouri.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-0730-4694")) ## add contributor template (middle name/initial optional) #person("First Middle", "Last", , #email = "email@address.com", role = c("ctb")) )
 # Description: An implementation of calls designed to collect and organize Twitter data via Twitter's REST and stream Application Program Interfaces (API), which can be found at the following URL: <https://developer.twitter.com/en/docs>.
 # Depends: R (>= 3.1.0)
-# Imports: httr (>= 1.3.0), jsonlite (>= 0.9.22), magrittr (>= 1.5.0), tibble (>= 1.3.4), utils
+# Imports: httr (>= 1.3.0), jsonlite (>= 0.9.22), magrittr (>= 1.5.0), tibble (>= 1.3.4), utils, progress, Rcpp, httpuv
 # License: MIT + file LICENSE
 # URL: https://CRAN.R-project.org/package=rtweet
 # BugReports: https://github.com/mkearney/rtweet/issues
 # Encoding: UTF-8
-# Suggests: ggplot2, knitr, magick, openssl, readr, rmarkdown, testthat, webshot, covr
+# Suggests: ggplot2, knitr, magick, openssl, readr, rmarkdown, testthat (>= 2.1.0), webshot, covr, igraph
 # VignetteBuilder: knitr
 # LazyData: yes
-# RoxygenNote: 6.1.0.9000
-# NeedsCompilation: no
-# Packaged: 2018-09-28 20:20:01 UTC; kearneymw
+# RoxygenNote: 6.1.1
+# LinkingTo: Rcpp
+# NeedsCompilation: yes
+# Packaged: 2019-05-19 22:25:42 UTC; mwk
 # Author: Michael W. Kearney [aut, cre] (<https://orcid.org/0000-0002-0730-4694>)
 # Maintainer: Michael W. Kearney <kearneymw@missouri.edu>
 # Repository: CRAN
-# Date/Publication: 2018-09-28 20:40:03 UTC
+# Date/Publication: 2019-05-19 23:10:03 UTC
