--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,42 +13,39 @@ source:
   sha256: 3de175a6faa49fd585fb283d970f06279528e03ff562c5928008d12f98c00db6
 
 build:
-  merge_build_host: true  # [win]
+  merge_build_host: True  # [win]
   number: 0
+  noarch: generic
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
-    - {{ compiler('c') }}              # [not win]
-    - {{ compiler('m2w64_c') }}        # [win]
-    - {{ compiler('cxx') }}            # [not win]
-    - {{ compiler('m2w64_cxx') }}      # [win]
-    - {{ posix }}filesystem        # [win]
-    - {{ posix }}make
-    - {{ posix }}sed               # [win]
-    - {{ posix }}coreutils         # [win]
     - {{ posix }}zip               # [win]
+    - cross-r-base {{ r_base }}    # [build_platform != target_platform]
   host:
     - r-base
-    - r-rcpp
-    - r-httpuv
+    - r-bit64 >=4.0.5
+    - r-curl >=4.3.2
     - r-httr >=1.3.0
     - r-jsonlite >=0.9.22
-    - r-magrittr >=1.5.0
-    - r-progress
+    - r-lifecycle >=1.0.0
+    - r-progress >=1.2.2
+    - r-rlang >=0.4.10
     - r-tibble >=1.3.4
+    - r-withr >=2.5.0
   run:
     - r-base
-    - {{ native }}gcc-libs         # [win]
-    - r-rcpp
-    - r-httpuv
+    - r-bit64 >=4.0.5
+    - r-curl >=4.3.2
     - r-httr >=1.3.0
     - r-jsonlite >=0.9.22
-    - r-magrittr >=1.5.0
-    - r-progress
+    - r-lifecycle >=1.0.0
+    - r-progress >=1.2.2
+    - r-rlang >=0.4.10
     - r-tibble >=1.3.4
+    - r-withr >=2.5.0
 
 test:
   commands:
@@ -58,9 +55,11 @@ test:
 about:
   home: https://CRAN.R-project.org/package=rtweet
   license: MIT
-  license_file: LICENSE
   summary: "An implementation of calls designed to collect and organize Twitter data via Twitter's REST and stream Application Program Interfaces (API), which can be found at the following URL: <https://developer.twitter.com/en/docs>."
   license_family: MIT
+  license_file:
+    {{ environ["PREFIX"] }}/lib/R/share/licenses/MIT
+    - LICENSE
 
 extra:
   recipe-maintainers:
